// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/TextInput Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="inline-block w-64"
  >
    <span
      class="svelte-1gs1cgl"
    >
       
      <input
        class="svelte-1gs1cgl"
        placeholder=""
        type="text"
      />
    </span>
  </span>
</section>
`;

exports[`Storyshots Components/TextInput With Icon And Placeholder 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="inline-block w-64"
  >
    <span
      class="svelte-1gs1cgl icon"
    >
      <i
        class="material-icons svelte-1gs1cgl"
      >
        search
      </i>
       
      <input
        class="svelte-1gs1cgl"
        placeholder="search..."
        type="search"
      />
    </span>
  </span>
</section>
`;

exports[`Storyshots Components/TextInput With Value 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="inline-block w-64"
  >
    <span
      class="svelte-1gs1cgl icon"
    >
      <i
        class="material-icons svelte-1gs1cgl"
      >
        person
      </i>
       
      <input
        class="svelte-1gs1cgl"
        placeholder=""
        type="text"
      />
    </span>
  </span>
</section>
`;
